packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/raw-type/RawMapCase.java
package sample.bad;

import java.util.Map;

class RawMapCase {
    private Map values;
}
